Fix: refactor with Spring features starter pack - write simple config and register beans